--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,6 +21,7 @@ analyze-data:
   script:
     - echo "Analyzing data..."
     - mkdir -p data/analysis  # Create the directory if it doesn't exist
+    - pip install -r requirements.txt  # Ensure requirements are installed
     - python scripts/analyze.py
   dependencies:
     - preprocess-data
@@ -33,6 +34,7 @@ generate-report:
   script:
     - echo "Generating report..."
     - mkdir -p data/reports  # Create the directory if it doesn't exist
+    - pip install -r requirements.txt  # Ensure requirements are installed
     - python scripts/generate_report.py
   dependencies:
     - analyze-data
