--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ preprocess-data:
     - mkdir -p data/raw data/processed  # Create necessary directories
     - pip install --upgrade pip
     - pip install -r requirements.txt
-    - python scripts/preprocess_data.py
+    - python scripts/preprocess.py
   artifacts:
     paths:
       - data/processed/processed_data.csv
@@ -24,7 +24,7 @@ analyze-data:
     - mkdir -p data/processed  # Ensure directory exists for analysis output
     - pip install --upgrade pip
     - pip install -r requirements.txt
-    - python scripts/analyze.py  # Correctly reference analyze.py script
+    - python scripts/analyze.py
   dependencies:
     - preprocess-data
   artifacts:
@@ -44,4 +44,5 @@ generate-report:
   artifacts:
     paths:
       - report.pdf
+
 
